add generic repository, unit of work

--- a/RentalVideo.Data/App.config
+++ b/RentalVideo.Data/App.config
@@ -15,6 +15,6 @@
     </providers>
   </entityFramework>
   <connectionStrings>
-    <add name="RentalVideo" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=RentalVideo;Integrated Security=SSPI; MultipleActiveResultSets=true" providerName="System.Data.SqlClient"/>
+    <add name="RentalVideo" connectionString="Data Source=localhost;Initial Catalog=RentalVideo;Integrated Security=SSPI; MultipleActiveResultSets=true" providerName="System.Data.SqlClient"/>
   </connectionStrings>
 </configuration>
