--- a/RentalVideo.Data/RentalVideo.Data.csproj
+++ b/RentalVideo.Data/RentalVideo.Data.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Data.Entity" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -60,6 +61,11 @@
     <Compile Include="Infrastructure\IEntityBaseRepository.cs" />
     <Compile Include="Infrastructure\IUnitOfWork.cs" />
     <Compile Include="Infrastructure\UnitOfWork.cs" />
+    <Compile Include="Migrations\201608181714123_install_migration.cs" />
+    <Compile Include="Migrations\201608181714123_install_migration.Designer.cs">
+      <DependentUpon>201608181714123_install_migration.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Configurations\RentalConfiguration.cs" />
     <Compile Include="RentalVideoContext.cs" />
@@ -77,6 +83,14 @@
       <Project>{2a34b624-0897-45eb-a0eb-f1f1a37c1cf9}</Project>
       <Name>RentalVideo.Entities</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201608181714123_install_migration.resx">
+      <DependentUpon>201608181714123_install_migration.cs</DependentUpon>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="readme.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
