--- a/RentalVideo.Data/RentalVideo.Data.csproj
+++ b/RentalVideo.Data/RentalVideo.Data.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Configurations\StockConfiguration.cs" />
     <Compile Include="Configurations\UserConfiguration.cs" />
     <Compile Include="Configurations\UserRoleConfiguration.cs" />
+    <Compile Include="Extensions\UserExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
