--- a/RentalVideo/RentalVideo.csproj
+++ b/RentalVideo/RentalVideo.csproj
@@ -52,6 +52,10 @@
       <HintPath>..\packages\Autofac.4.0.0\lib\net451\Autofac.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Autofac.Integration.WebApi, Version=4.0.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
+      <HintPath>..\packages\Autofac.WebApi2.4.0.0\lib\net45\Autofac.Integration.WebApi.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="AutoMapper, Version=5.1.1.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
       <HintPath>..\packages\AutoMapper.5.1.1\lib\net45\AutoMapper.dll</HintPath>
       <Private>True</Private>
@@ -219,6 +223,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="App_Start\AutofacWebapiConfig.cs" />
+    <Compile Include="App_Start\Bootstrapper.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
@@ -1156,6 +1162,24 @@
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\RentalVideo.Base\RentalVideo.Base.csproj">
+      <Project>{608a24fe-cf1f-4247-bfc6-db368e80b7ee}</Project>
+      <Name>RentalVideo.Base</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\RentalVideo.Data\RentalVideo.Data.csproj">
+      <Project>{4a5bb83c-edd8-4825-b059-a10083edfdd1}</Project>
+      <Name>RentalVideo.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\RentalVideo.Entities\RentalVideo.Entities.csproj">
+      <Project>{2a34b624-0897-45eb-a0eb-f1f1a37c1cf9}</Project>
+      <Name>RentalVideo.Entities</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\RentalVideo.Services\RentalVideo.Services.csproj">
+      <Project>{e802670d-568e-4aff-ae17-4ac5d34597c2}</Project>
+      <Name>RentalVideo.Services</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
